Fix typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -81,6 +81,7 @@ dei seguenti argomenti:
 \item Operazioni algebriche elementari (es. frazioni e potenze).
 \item Polinomi.
 \item Equazioni di primo grado.
+\item Relazione di proporzionalità, equazione della retta
 \item Rappresentazioni di numeri su un asse ordinato.
 \item Rappresentazione di coppie di numeri (punti) su un diagramma
       cartesiano.
@@ -96,12 +97,12 @@ di posizione, distanza, istante (inteso come
 \emph{lettura di orologio}) e intervallo di tempo.
 Succesivamente, guidato dal docente, esplora le relazioni
 che intercorrono tra queste nozioni nel contesto del moto di
-un corpo, giungendo ad una comprensione qualitativa dei
-concetti di \emph{evento} e \emph{legge oraria}.
+un corpo, giungendo ad una comprensione qualitativa del
+concetto di \emph{legge oraria}.
 
 \section{Engage}
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Computer
 \end{itemize}
 
@@ -175,7 +176,7 @@ di moto a partire dal grafico stesso.
 \subsection{Fotografare nel Tempo}
 
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \item \textbf{Materiale richiesto:} Smartphone, Fogli di Carta
 \end{itemize}
 
@@ -229,7 +230,7 @@ Anche in questo caso occorre che il professore mostri almeno uno o più esempi
 \subsection{Fotografarsi nel Tempo e nello Spazio}
 
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
 \end{itemize}
 
@@ -299,7 +300,7 @@ scatti. Il professore può formalizzare questo concetto utilizzando il termine
 Si osserverà che l’intervallo di tempo sarà dato dalla differenza tra le
 letture di orologio delle due fotografie. Il docente a questo punto può
 domandare se un singolo scatto occupi un intervallo di tempo. Si ritiene che la
-maggior parte degli alunni abbia chiaro che la risposta sia no. La letteratura
+maggior parte degli alunni abbia chiaro che la risposta sia negativa. La letteratura
 fa intendere che un focus importante è assicurarsi che lo studente comprenda
 che un istante di tempo equivale a \emph{zero} secondi\cite{arons1997teaching}
 \footnote{
@@ -314,7 +315,7 @@ Ciascuna fotografia corrisponde ad un istante di tempo differente.
 Dopo aver discusso i risultati della prima attività, risulta più immediato il
 ragionamento sulla seconda. Un maggior numero di studenti è in grado di dire
 che ciascuno oggetto fotografato è in un luogo preciso, cioè occupa una
-posizione definita nello spazio. Alcuni possono costruire un’analogia tra
+posizione definita nello spazio. Alcuni potrebbero costruire un’analogia tra
 l’intervallo di tempo tra uno scatto e l’altro della prima attività e lo spazio
 tra un oggetto e l’altro in questa esperienza. Si ipotizza che qualcuno in
 classe riuscirà a far corrispondere l’aver camminato tra un oggetto incontrato
@@ -335,7 +336,7 @@ dalla discussione: il soggetto fotografato. Infatti, gli studenti potrebbero
 osservare che, a differenza delle prime due attività, qui il soggetto è sempre
 lo stesso in ogni scatto, cambiano solo i luoghi in cui si trova e le letture
 di orologio. Dunque, il grafico caratterizzato dai due assi posizione-tempo
-mostra dove si trova il soggetto, fissato un istante di tempo, ovvero rappresenta
+mostra dove si trova il soggetto -fissato un istante di tempo- ovvero rappresenta
 il moto di questo corpo. Il professore sottolinea nuovamente l’esistenza di
 due informazioni, la posizione e il tempo, e che esse siano in relazione tra
 loro. Egli in particolare spiega che esse sono legate dal concetto
@@ -437,7 +438,7 @@ Le biglie utilizzate devono essere tutte uguali tra loro per massa e dimensione.
 \end{figure}
 Prima di iniziare la fase operativa, il professore propone un gioco
 agli studenti, chiedendo loro di indovinare in quale liquido la biglia
-si muoverà più velocemente. \`E importante che in questa fase e per
+si muoverà più rapidamente. \`E importante che in questa fase e per
 tutto il resto del percorso didattico, il docente non utilizzi termini
 che si riferiscono a concetti che gli studenti non hanno mai
 affrontato prima. \`E necessario infatti che lo studente faccia
@@ -504,7 +505,7 @@ poggiata sul bordo del tavolo di lavoro (come in  Figura \ref{fig:kine_hand}),
 \end{figure}
 dove sono stati precedentemente incollati dei pezzi di nastro adesivo
 equidistanti tra loro (non è rilevante la lunghezza della distanza
-tra le strisce di nastro, e può essere scelta arbitrariamente). A questo
+tra le strisce di nastro e può essere scelta arbitrariamente). A questo
 punto il docente muove la mano secondo quanto
 si legge nel grafico in Figura \ref{fig:kine_plot1}:
 \footnote{\`E possibile scaricare i video dell'attività cinestetica presso
@@ -554,7 +555,7 @@ La seconda attività proposta agli studenti consiste nello svolgere il
 procedimento opposto rispetto all’attività precedente. Il professore presenta
 agli studenti dei video che mostrano  alcuni moti della sua mano lungo il bordo
 del tavolo (un minimo di tre) e chiede loro di graficarli. In questo modo
-ciascuno studente può concentrarsi sul moto del proprio corpo, comprendendo più
+ciascuno studente può concentrarsi sul moto del corpo, comprendendo più
 approfonditamente la relazione tra il moto della mano e cosa viene riportato
 sul grafico
 \footnote{
@@ -596,9 +597,9 @@ alla biglia per percorrere ciascun
 tratto \footnote{\`E possibile scaricare il video dell'esperimento presso
           \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questo indirizzo web}}.
          }.
-Il docente chiede agli studenti di riportate in una tabella i dati
+Il docente chiede agli studenti di riportare in una tabella i dati
 misurati e di rappresentare il moto della biglia in un diagramma
-spazio tempo, esplicitando che per compiere quest'ultima operazione
+spazio-tempo, esplicitando che per compiere quest'ultima operazione
 sarà necessario sommare di volta in volta tutte le distanze percorse
 dalla biglia fino alla posizione di interesse. Lo stesso vale per
 gli intervalli di tempo.
@@ -609,15 +610,15 @@ vengono divisi in gruppi di tre per svolgere l’esperimento.
 \section{Explain}\label{velocità_explain}
 
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 40\textsuperscript{$\prime$}
-      + 60\textsuperscript{$\prime$} di discussione con il professore
+\item \textbf{Tempo richiesto in aula:} 40\textsuperscript{$\prime$} di discussione tra studenti
+      + 60\textsuperscript{$\prime$} di dialogo con il docente
 \end{itemize}
 
 Dopo che gli studenti hanno svolto tutte le attività proposte, occorre un
 confronto con l’insegnante e con i propri compagni di classe su quanto
 osservato. A questo scopo la classe viene divisa in gruppi di cinque, nei quali gli
 studenti hanno il tempo di discutere e confrontare i risultati degli esercizi
-svolti. Questo primo confronto coinvolge le prime due attività svolte. Dopo
+svolti. Questo primo confronto coinvolge le prime due attività. Dopo
 circa mezz’ora l’insegnante riunisce tutti gli alunni e chiede ad un
 rappresentante di ciascun gruppo di presentare quanto emerso.
 Si presume che la maggior parte degli studenti riesca ad interpretare i
@@ -750,8 +751,8 @@ L'insegnante chiede agli studenti di descrivere cosa accade nel
 video, concentrandosi in particolare sulla velocità di Felix in caduta
 libera. Gli studenti potranno osservare che dopo il lancio la velocità
 dell'astronauta aumenta rapidamente e dunque non rimane costante come nel
-caso delle biglia che cade in un fluido molto viscoso.
-Gli studenti potrebbero utilizzare frasi come ``L'astronuata cade
+caso della biglia che cade in un fluido molto viscoso.
+Gli studenti potrebbero utilizzare frasi come ``L'astronauta cade
 sempre più velocemente'' oppure ``L'astronauta parte
 lentamente e poi va più veloce''.
 Il professore dovrebbe porre l'attenzione della classe sulle
@@ -799,7 +800,8 @@ della curva, li rappresenta grazie al software e chiede agli studenti
 come si potrebbe rappresentare sul grafico la velocità media dell'astronauta
 in quel preciso tratto, compreso tra i punti A e B.
 Si suppone che gli studenti, in virtù di quanto appreso
-nella Sezione \ref{velocità_explain}, sapranno indicare al professore di
+nella Sezione \ref{velocità_explain}, sappiano indicare al professore che
+occorre
 disegnare una retta che congiunga i due punti presi in considerazione.
 Il docente può aiutare gli studenti rappresentando nel grafico le proiezioni
 dei punti scelti sugli assi ordinati.
@@ -812,14 +814,14 @@ tre volte, avvicinando sempre di più i punti A e B (permettendo ai ragazzi
 ogni volta di osservare la nuova retta secante) fino a che i due punti
 coincidono (come si vede nella Figura \ref{fig:geogebra}).
 
-Il professore suggerisce agli studenti che ora la retta rappresentata nel grafico
+Il docente suggerisce agli studenti che ora la retta rappresentata nel grafico
 è la retta tangente alla curva nel punto A, e chiede agli studenti se questa possa
 ancora rappresentare una velocità media. Gli studenti, guidati al caso limite dalla retta
 secante alla retta tangente, hanno ora la possibilità di realizzare che il coefficiente
 angolare di quest'ultima rappresenta la velocità media corrispondente ad un intervallo
 di tempo di durata \emph{zero} secondi, ovvero la ``\emph{velocità media di un istante}''.
 Il docente ufficializza la conoscenza acquisita, spiegando che questa grandezza è
-chiamata \emph{velocità instantanea} o più semplicemente \emph{velocità}.
+chiamata \emph{velocità istantanea} o più semplicemente \emph{velocità}.
 
 \section{Evaluate}
 Per la valutazione di questo secondo modulo del percorso il docente tiene conto della
@@ -832,7 +834,7 @@ studenti alla fine del percorso
 
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}\label{accelerazione}
 Nel presente modulo lo studente familiarizza con il concetto di accelerazione
-media e con la legge oraria del moto uniformemente accelerato.
+media e con un caso particolare della legge oraria del moto uniformemente accelerato.
 Infine egli giunge ad una comprensione più profonda della differenza
 tra accelerazione e velocità.
 
@@ -880,8 +882,8 @@ casa per arrivare alla comprensione dei concetti citati ad inizio Capitolo \ref{
 \subsection{Moto di un Corpo su un Piano Inclinato}
 
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
-\item \textbf{Materiale:} Bicicletta/Skateboard/Pattini a Rotelle; Cronometro,
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Bicicletta/Skateboard/Monopattino; Cronometro,
 Nastro Adesivo, Bindella.
 \end{itemize}
 
@@ -893,7 +895,7 @@ adesivo equidistanti tra loro (si veda la Figura \ref{fig:bicicletta_rampa}).
 \centering
   \includegraphics[width=\textwidth]{bicicletta_rampa}
   \caption{Un esempio di discesa regolare sulla quale è stata fissata
-           una scala con del nastro adesivo.
+           una scala indicandola con dei pezzi di nastro adesivo.
           }
   \label{fig:bicicletta_rampa}
 \end{figure}
@@ -930,7 +932,7 @@ dovranno ottenere e ascolta le domande degli studenti in merito.
 \subsection{Dal Moto al Grafico dello Spostamento in Funzione del Tempo}
 
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Foglio, Righello
 \end{itemize}
 
@@ -950,10 +952,10 @@ tratto e nel suo insieme.
 
 \subsection{Attività Bonus}
 Qualora la lezione si svolga in presenza, un'attività aggiuntiva da
-proporre potrebbe essere la caduta di un carrello lungo un piano inclinato
+proporre potrebbe essere la discesa di un carrello lungo un piano inclinato
 alla cui base è presente un sensore di prossimità. Quest’ultimo è programmato
 per misurare con una certa frequenza lo spazio percorso.
-Il fenomeno fisico in studio è analogo a quello della bicicletta sulla rampa,
+Il fenomeno fisico in analisi è analogo a quello della bicicletta sulla rampa,
 ma in questo caso vengono fissati gli
 intervalli di tempo, focalizzando l’attenzione degli studenti sulla variazione
 delle distanze percorse nei diversi tratti.
@@ -968,8 +970,8 @@ delle distanze percorse nei diversi tratti.
 Dopo che gli studenti hanno svolto tutte le attività proposte, occorre un
 confronto con l’insegnante e con i propri compagni di classe su quanto
 osservato. Nel corso di tale confronto il professore deve premurarsi di
-utilizzare un software versatile,  per disegnare in tempo reale
-sui grafici ottenuti nelle attività precedenti gli elementi grafici
+utilizzare un software versatile, per disegnare in tempo reale
+sui diagrammi ottenuti nelle attività precedenti gli elementi grafici
 proposti dagli studenti
 \footnote{
           Nell'ambito di questo progetto si è utilizzato il
@@ -980,7 +982,7 @@ proposti dagli studenti
          }.
 Inizialmente il professore chiede di descrivere i grafici ottenuti per le
 velocità medie dei diversi tratti del percorso (si vede un esempio di quello
-che gli studenti dovrebbero ottenere nella Figura \ref{fig:v-N_tratto})
+che gli studenti dovrebbero ottenere nella Figura \ref{fig:v-N_tratto}).
 
 \begin{figure}[H]
 \centering
@@ -990,8 +992,8 @@ che gli studenti dovrebbero ottenere nella Figura \ref{fig:v-N_tratto})
   \label{fig:v-N_tratto}
 \end{figure}
 
-si ritiene che la quasi totalità degli
-studenti osservi una variazione delle velocità media nei diversi tratti. In
+Si ritiene che la quasi totalità degli
+studenti osservi una variazione delle velocità medie nei diversi tratti. In
 particolare si dovrebbe notare  un aumento della velocità, supportato
 dall'esperienza sensoriale
 provata durante la discesa. La letteratura
@@ -1029,10 +1031,11 @@ istanti che si trovano a metà di ogni intervallo di tempo.
 Si presume che essi provino a posizionare i punti vicino al segmento
 corrispondente della spezzata e non su di essa, poiché si è appurato essere una
 soluzione non adatta. Il docente successivamente mostra ai ragazzi i punti da
-lui tracciati, che si basano sull’analisi dei dati ottenuti svolgendo in prima
-persona l’attività prima della lezione (Appendice \ref{appendix_data_analysis}).
-e reitera il procedimento \ref{fig:parabola_sequence}.
-In questo modo emerge sempre di più correttamente l’andamento del grafico
+lui disegnati, che si basano sull’analisi dei dati ottenuti durante il precedente
+svolgimento
+dell’attività in prima persona (Appendice \ref{appendix_data_analysis}).
+Egli in seguito reitera il procedimento \ref{fig:parabola_sequence}.
+In questo modo emerge sempre più correttamente l’andamento del grafico
 dello spostamento in funzione del tempo.
 
 Alla classe viene chiesto di ipotizzare
@@ -1100,8 +1103,8 @@ dove $k$ è ancora un parametro
 \end{figure}
 
 Qualora durante la discussione non emerga da parte degli studenti
-l’intuizione di considerare un'espressione quadratica, infine è il docente
-stesso a suggerirla, ricordando agli studenti tutte le operazioni matematiche
+l’intuizione di considerare un'espressione quadratica, è il docente
+stesso a suggerirla, ricordando agli studenti tutte le relazioni matematiche
 che essi conoscono e graficando alcune di esse per confrontarle con
 l'andamento di interesse. Questo serve ad escludere quelle espressioni
 che comportano una decrescita nel tempo (come $s(t) = \frac{1}{t}$).
@@ -1109,10 +1112,10 @@ Occorre che l’insegnante tracci il grafico della potenza
 quadratica con il software, poichè lo studente non ne ha una conoscenza
 pregressa.
 
-Ora occorre che il professore chieda agli studenti di capire quale
+A questo punto è necessario che il professore chieda agli studenti di capire quale
 possa essere il
 valore del coefficiente $k$ che meglio descriva i dati. Si ritiene che questa
-fase di ricerca sia utile agli studenti, per comprendere come si modifica il
+fase di ricerca sia utile agli studenti per comprendere come si modifica il
 grafico al variare di tale parametro. Dopo alcune ipotesi, è il professore a
 mostrare la curva che meglio descrive l’andamento: la curva ottenuta fissando
 $k$ al valore ricavato a partire dall’analisi dati.
@@ -1148,13 +1151,13 @@ analizzato come \emph{uniformemente accelerato}.
 
 \section{Extend}
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 60\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 50\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Smartphone, Computer, Oggetti domestici
 \end{itemize}
 
 In questa fase si desidera che lo studente estenda la sua consapevolezza
 riguardo il concetto di accelerazione. La letteratura documenta una difficoltà
-in una frazione significativa degli studenti nel distinguere tra velocità
+in una frazione significativa degli studenti nel distinguere velocità
 e accelerazione. Tale difficoltà si manifesta in particolare nello studio
 del fenomeno conosciuto come \emph{Top of the Flight}, o in generale
 in tutti i casi nei quali si verifica che la velocità istantanea sia nulla
@@ -1165,7 +1168,7 @@ Gli studenti hanno già fatto esperienza di questa situazione nella Sezione
 \ref{a_explain}, durante l'analisi dell'esperimento della bicicletta che
 scende da una rampa. Quando la bicicletta si trova ferma in cima alla rampa
 e inizia la sua discesa, per un solo istante (quello iniziale) la sua velocità
-è nulla, mentre la sua accelerazione ha un valore non nullo, che rimmarrà costante
+è nulla, mentre la sua accelerazione ha un valore non nullo, che rimarrà costante
 lungo tutta la discesa.
 
 L'insegnante presenta alla classe un surrogato in scala dell'esperimento della
@@ -1180,7 +1183,7 @@ bicicletta, perché possa essere studiato con l'applicazione per smartphone
          }.
 In principio il docente presenta agli studenti l'app, mostrando loro dove
 reperirla e le sue funzioni, in particolare lo strumento di misura
-\emph{Acceleration (Whitout g)} (Figura \ref{fig:phyphox}) e la funzione
+\emph{Acceleration (Without g)} (Figura \ref{fig:phyphox}) e la funzione
 \emph{Save experiment state}.
 L'insegnante dovrebbe mostrare un rapido ma efficace esempio pratico
 di utilizzo di questo strumento, per esempio attivando la funzione
@@ -1190,20 +1193,20 @@ al volo e mostrando il risultato agli studenti.
 \centering
   \includegraphics[width=\textwidth]{phyphox}
   \caption{Uno \emph{screenshot} della schermata dello strumento
-           \emph{Acceleration (Whitout g)}
+           \emph{Acceleration (Without g)}
            nell'applicazione Phyphox.}
   \label{fig:phyphox}
 \end{figure}
 In seguito il professore assegna agli studenti un compito da eseguire
-a casa: indica loro di scegliere una superfice inclinata
+a casa: indica loro di scegliere una superficie inclinata
 e priva di attrito
 \footnote{
-          Si ricorda che gli studenti di una classe prima liceo
+          Si ricorda che gli studenti di una classe di prima liceo
           non hanno familiarità con il concetto di attrito,
           dunque il professore dovrebbe utilizzare termini differenti
           come ``Superficie inclinata e liscia''.
          },
-e di far scivolare il telefono lungo la superficie, attivando
+e di farvi scivolare il telefono, attivando
 la registrazione dati dello strumento appena mostrato.
 Il compito di scegliere l'inclinazione del piano, il modo in cui
 collocare il telefono sopra di esso e altre osservazioni pratiche
@@ -1249,7 +1252,7 @@ istante, non necessariamente deve avere anche un'accelerazione nulla.
 Per la valutazione di questo terzo modulo del percorso il docente tiene conto
 dell'impegno impiegato nello svolgere le attività assegnate come compiti a casa,
 del lavoro svolto sui grafici e sull'esperimento, e del coinvolgimento attivo
-all’interno dei gruppi di discussione.
+nel dialogo con l'insegnante e la classe.
 Si terrà conto anche di una prova scritta da sottoporre agli
 studenti alla fine del percorso
 (si veda l'Appendice \ref{appendix_test}).
@@ -1392,7 +1395,7 @@ mantiene una velocità uniforme pari a $50\, km/h$.
 \item Disegna i grafici dei due moti sullo stesso diagramma \emph{spostamento-tempo}
 (analogo a quelli dell’esercizio 1). \hfill \textbf{[10 punti]}
 \item Si incontreranno le due macchine? Se sì, dove e quando? Risolvi sia
-osservando i grafici che utilizzando la legge oraria del moto rettilineo
+utilizzando i grafici che la legge oraria del moto rettilineo
 uniforme incontrata in classe. \hfill \textbf{[10 punti]}
 \end{enumerate}
 
