Add quatation marks in title (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -16,7 +16,7 @@
 \addto\captionsitalian{\renewcommand{\bibname}{Riferimenti}}
 
 \title{
-Batti il 5E, Cinematica!\\
+``Batti il 5E, Cinematica!''\\
 \large Percorso Didattico Introduttivo alle Basi della Cinematica
 }
 \author{Daniele Melocchi\\Agnese Montanaro\\Matteo
