Make extend of acceleration inquiry (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -1151,7 +1151,9 @@ analizzato come \emph{uniformemente accelerato}.
 
 \section{Extend}
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 50\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
+      di discussione tra studenti + 20 minuti di dialogo con il
+      docente.
 \item \textbf{Materiale:} Smartphone, Computer, Oggetti domestici
 \end{itemize}
 
@@ -1213,17 +1215,44 @@ collocare il telefono sopra di esso e altre osservazioni pratiche
 sono lasciate allo studente.
 
 Durante la lezione successiva l'insegnate chiede agli studenti
-di condividere la propria esperienza e di spiegare l'interpretazione
-che questi danno ai grafici prodotti dall'applicazione.
-Il docente dovrebbe aver riprodotto l'esperienza, in modo
-da poter presentare agli studenti i propri risultati in una
-forma più adatta alla comprensione degli stessi.
-Si ritiene che i grafici prodotti da Phyphox siano utili,
-in quanto di accesso immediato, ma di difficile interpretazione
-per uno studente. Il docente potrà esportare i propri
-dati nel formato preferito grazie alla funzione
-\emph{Export Data}, e in seguito analizzarli con uno
-strumento di propria scelta.
+di condividere la loro esperienza riguardo l'esperimento
+compiuto a casa.
+A questo scopo egli divide la classe in gruppi di
+discussione di cinque persone e lascia agli studenti trenta
+minuti di tempo per confrontarsi sui risultati ottenuti.
+Deve essere lasciata agli studenti (anche in presenza)
+la possibilità di accendere il proprio smartphone e di
+mostrare ai propri compagni i dati registrati da
+Phyphox.
+Il professore si sposta tra i gruppi, monitorando
+la discussione.
+Egli eventualmente può stimolare gli studenti che si trovano
+in difficoltà nell'analizzare i grafici, ponendo
+alcune domande: ``Riuscite ad individuare nel grafico l'istante
+in cui il telefono è stato lasciato libero di scivolare?'',
+``Quanto vale l'accelerazione prima che il telefono inizi a
+scivolare?'', ``Quanto vale l'accelerazione nell'istante
+in cui il telefono viene lasciato scivolare, ma è ancora fermo,
+ovvero la sua velocità vale zero? E mentre il telefono sta
+scivolando?''.
+
+Al termine della discussione in ogni gruppo viene scelto
+un portavoce, che avrà il compito di condividere le
+con il resto della classe e l'insegnante quanto osservato.
+Il docente dovrebbe aver riprodotto l'esperienza in precedenza,
+in modo da poter presentare agli studenti i propri risultati.
+Egli mostra il grafico prodotto da
+Phyphox in tempo reale durante l'esperimento e, se lo desidera,
+può aggiungerne un secondo, ottenuto
+esportando i propri dati nel formato preferito (grazie alla funzione
+\emph{Export Data}) e analizzando questi ultimi con uno strumento di propria
+scelta.
+\footnote{
+          Si ritiene che i grafici prodotti da Phyphox siano utili,
+          in quanto di accesso immediato, ma che si possona ottenere
+          diagrammi di più facile interpretazione con strumenti
+          dedicati.
+         }
 Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
 \begin{figure}[H]
 \centering
@@ -1237,16 +1266,21 @@ Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
           }
   \label{fig:a_phyphox}
 \end{figure}
-Il professore aiuta gli studenti ad analizzare il grafico ponendo
-alcune domande: ``Riuscite ad individuare nel grafico l'istante
-in cui il telefono è stato lasciato libero di scivolare?'',
-``Quanto vale l'accelerazione prima che il telefono inizi a
-scivolare?'', ``Quanto vale l'accelerazione nell'istante
-in cui il telefono viene lasciato scivolare, ma è ancora fermo,
-ovvero la sua velocità vale zero? E mentre il telefono sta
-scivolando?''. In questo modo egli guida gli studenti verso
-la realizzazione che un corpo avente velocità nulla ad un certo
-istante, non necessariamente deve avere anche un'accelerazione nulla.
+
+Si ritiene che parte degli studenti possa aver individuato
+correttamente l'istante nel quale il telefono viene lasciato
+scivolare e  che alcuni di essi possano aver osservato che in quell'istante
+la velocità del telefono è ancora nulla. Se così non fosse, sarà il
+docente a suggerire alla classe queste valutazioni.
+Grazie all'esperienza nel leggere grafici acquisita nei moduli precedenti,
+è plausibile che gli studenti abbiano notato che nel suddetto istante
+l'accelerazione passa da un valore nullo ad un valore non nullo che si
+mantiene costante (a meno di oscillazioni) per tutto la durata
+del moto sul piano inclinato.
+Il docente sottolinea quanto osservato dagli studenti, affermando
+che in effetti velocità e accelerazione sono grandezze ben distinte
+e un corpo avente velocità nulla in un certo istante non necessariamente
+deve avere accelerazione nulla nel medesimo.
 
 \section{Evaluate}
 Per la valutazione di questo terzo modulo del percorso il docente tiene conto
