Fix some typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -1237,7 +1237,7 @@ ovvero la sua velocità vale zero? E mentre il telefono sta
 scivolando?''.
 
 Al termine della discussione in ogni gruppo viene scelto
-un portavoce, che avrà il compito di condividere le
+un portavoce, che avrà il compito di condividere
 con il resto della classe e l'insegnante quanto osservato.
 Il docente dovrebbe aver riprodotto l'esperienza in precedenza,
 in modo da poter presentare agli studenti i propri risultati.
@@ -1246,13 +1246,13 @@ Phyphox in tempo reale durante l'esperimento e, se lo desidera,
 può aggiungerne un secondo, ottenuto
 esportando i propri dati nel formato preferito (grazie alla funzione
 \emph{Export Data}) e analizzando questi ultimi con uno strumento di propria
-scelta.
+scelta
 \footnote{
           Si ritiene che i grafici prodotti da Phyphox siano utili,
           in quanto di accesso immediato, ma che si possona ottenere
           diagrammi di più facile interpretazione con strumenti
           dedicati.
-         }
+         }.
 Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
 \begin{figure}[H]
 \centering
@@ -1269,12 +1269,12 @@ Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
 
 Si ritiene che parte degli studenti possa aver individuato
 correttamente l'istante nel quale il telefono viene lasciato
-scivolare e  che alcuni di essi possano aver osservato che in quell'istante
+scivolare e che alcuni di essi possano aver osservato che in quell'istante
 la velocità del telefono è ancora nulla. Se così non fosse, sarà il
 docente a suggerire alla classe queste valutazioni.
 Grazie all'esperienza nel leggere grafici acquisita nei moduli precedenti,
 è plausibile che gli studenti abbiano notato che nel suddetto istante
-l'accelerazione passa da un valore nullo ad un valore non nullo che si
+l'accelerazione passa da un valore nullo ad un valore non nullo, che si
 mantiene costante (a meno di oscillazioni) per tutto la durata
 del moto sul piano inclinato.
 Il docente sottolinea quanto osservato dagli studenti, affermando
