Make extend of velocity inquiry (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -724,7 +724,8 @@ s = s_0 + v (t - t_0)
 \section{Extend}
 
 \begin{itemize}
-\item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
+\item \textbf{Tempo richiesto in aula:} 20\textsuperscript{$\prime$} di discussione tra studenti
+      + 30\textsuperscript{$\prime$} di dialogo con il docente
 \item \textbf{Materiale:} Computer
 \end{itemize}
 
@@ -760,8 +761,8 @@ risposte più simili alla prima affermazione. Quest'ultima
 infatti evidenzia che \emph{in ogni istante} la velocità
 dell'astronauta in caduta sta cambiando (e nel caso particolare aumenta).
 Il professore aiuta gli studenti a giungere ad una comprensione
-più lucida di questa realizzazione, utilizzando il software
-\emph{GeoGebra}
+più lucida di questa realizzazione, assegnando un'attività da svolgere
+a casa mediante il sotware \emph{GeoGebra}
 \footnote{
           GeoGebra è una suite \emph{Free Software} di programmi per la didattica della
           matematica
@@ -769,6 +770,7 @@ più lucida di questa realizzazione, utilizzando il software
           Per maggiori informazioni, si visiti
           \textcolor{blue}{\href{https://www.geogebra.org/}{questo sito web}}.
          }.
+A tale scopo egli mostra alla classe alcune funzionalità base del software.
 Egli disegna con il programma un ramo di parabola con concavità
 verso il basso e lo mostra agli studenti (si veda la Figura
 \ref{fig:geogebra}), chiedendo di immaginare che questo grafico
@@ -795,25 +797,48 @@ rappresenti il moto di Felix nella stratosfera.
 La scala sugli assi non è importante e neppure che gli studenti sappiano quale
 curva è rappresentata nel grafico.
 Il professore chiede agli studenti di concentrarsi su un tratto arbitrario della
-caduta di Felix e di figurarlo nella propria mente; poi sceglie due punti
-della curva, li rappresenta grazie al software e chiede agli studenti
-come si potrebbe rappresentare sul grafico la velocità media dell'astronauta
-in quel preciso tratto, compreso tra i punti A e B.
-Si suppone che gli studenti, in virtù di quanto appreso
-nella Sezione \ref{velocità_explain}, sappiano indicare al professore che
-occorre
-disegnare una retta che congiunga i due punti presi in considerazione.
-Il docente può aiutare gli studenti rappresentando nel grafico le proiezioni
-dei punti scelti sugli assi ordinati.
-L'insegnante rappresenta la retta secante sul diagramma cartesiano e
-successivamente, utilizzando lo \emph{slider} presente nel programma,
-avvicina il punto B al punto A. Gli studenti osservano che l'inclinazione
-della secante è cambiata e questa si avvicina sempre più alla curva.
-Il professore ripete l'operazione altre due o
-tre volte, avvicinando sempre di più i punti A e B (permettendo ai ragazzi
-ogni volta di osservare la nuova retta secante) fino a che i due punti
-coincidono (come si vede nella Figura \ref{fig:geogebra}).
-
+caduta di Felix e di figurarlo nella propria mente.
+Sceglie quindi due punti della curva e li
+rappresenta grazie al software, indicando agli studenti come fare. Infine
+mostra la possibilità di spostare i punti lungo la curva tramite l’utilizzo
+della funzionalità \emph{slider}.
+In seguito il docente domanda agli studenti: ``Come si potrebbe
+rappresentare sul grafico la velocità media dell’astronauta in questo preciso
+tratto, compreso tra i punti A e B?'' e ancora ``Cosa accade se provo a muovere il punto B,
+tenendo fissato il punto A?''. Ogni alunno deve provare a rispondere individualmente a queste
+domande, come compito per casa,
+utilizzando GeoGebra. L’insegnante invia agli studenti il file progetto contente
+la curva mostrata in classe; In questo modo tutti gli studenti possano
+ragionare sul problema da un punto di partenza comune.
+Tornati in classe, gli studenti vengono suddivisi in gruppi di cinque per
+confrontarsi sui risultati ottenuti
+\footnote{
+          In modalità DAD gli studenti possono
+          condividere lo schermo per mostrare ai propri compagni il risultato ottenuto,
+          mentre in presenza viene chiesto loro di stampare immagini che mostrino alcune
+          fasi successive del loro lavoro.
+         }.
+L’insegnante monitora gli studenti
+o reca il suo aiuto nel caso di eventuali difficoltà, visitando le diverse aule virtuali (o
+girando tra i banchi). Dopo questa prima fase, la classe si riunisce e un
+portavoce per gruppo presenta quanto osservato. Si suppone che gli studenti, in
+virtù di quanto appreso nella Sezione \ref{velocità_explain}, sappiano indicare al professore che,
+per rappresentare la velocità media, occorre disegnare una retta che congiunga
+i due punti presi in considerazione. Il docente rappresenta questo
+risultato con GeoGebra e domanda agli studenti che cosa hanno scoperto
+modificando la durata dell'intervallo di tempo tra i due punti.
+Si presume che qualche alunno abbia osservato
+che la pendenza della retta secante varia al variare della posizione del punto
+B rispetto al punto A, fisso. L’insegnante quindi tramite lo slider sposta il
+punto B sul grafico per mostrare quanto discusso, fino ad avvicinarlo il più
+possibile al punto A
+\footnote{
+          Non è possibile sovrapporre perfettamente i punti A e B senza che la retta secante
+          risulti indefinita per il programma. Tuttavia, i punti possono
+          essere avvicinati a tal punto da non poterne più apprezzare la
+          distanza.
+         }
+(come si vede nella Figura \ref{fig:geogebra}).
 Il docente suggerisce agli studenti che ora la retta rappresentata nel grafico
 è la retta tangente alla curva nel punto A, e chiede agli studenti se questa possa
 ancora rappresentare una velocità media. Gli studenti, guidati al caso limite dalla retta
